# east-asian-ambiguous-width

./: .gitignore  HELLO  README.md  WIDTH_FULL_WIDTH.txt  WIDTH_ONLY_FULL_WIDTH.txt  charmaps_to_set-char-width-table.py  create_el.sh  create_group.py  my-utf-8-eaw-fullwidth.el  my-utf-8-eaw-fullwidth_cygwin.el
char-width_emacs/: char-width-list_emacs.txt  char-width_emacs.txt  current-emacs-ambiguous-width.el  exec.sh
char-width_emacs/output/: char-width-list_default-emacs.txt  char-width_emacs-default.txt
char-width_emacs/resources/: ambiguous_buffer.txt
char-width_freetype/: .gitignore  Makefile  ambiguous_width_comparison  ambiguous_width_comparison.c  char_width_freetype.c  charlist.h  commandline  commandline.c  compile_commands.json  exec.sh  meson.build  wcwidth_cygwin.c  wcwidth_cygwin.h
char-width_freetype/output/: ambiguous_width_comparison.txt
settings/: WIDTH_FULL_WIDTH.txt  charmaps_to_set-char-width-table.py  create_el.sh  my-utf-8-eaw-fullwidth.el  my-utf-8-eaw-fullwidth_cygwin.el
settings/charmaps/: UTF-8-EAW-FULLWIDTH.gz.diff
settings/cygwin/: mintty_force_use_xcwidth.diff
settings/emacs/: charmaps_to_set-char-width-table.py  create_el.sh
width-comparison/: .gitignore  Makefile  ambiguous.txt  ambiguous2.html  ambiguous_to_ambiguous2.py  display-emacs-char-width.el  display_emacs_char-width.el  display_wcwidth.c  exec.sh  htmlize.py  meson.build  strip.py  style.css  template.html  wcwidth.txt  width_joined.html  width_joined.txt  width_joined_to_html.py
width-comparison/display-wcwidth.old/: Makefile
(+9 files in other folders)
